--- a/src/app/components/dog-card/dog-card.component.html
+++ b/src/app/components/dog-card/dog-card.component.html
@@ -1,8 +1,12 @@
 <p-card class="dog-card">
   <ng-template pTemplate="header">
     <div class="dog-image-container" (click)="onImageClick()">
-      <img [src]="dog.img" [alt]="dog.name" class="dog-image" />
-      <span
+      <ng-container *ngIf="dog; else loadingSkeleton">
+        <img [src]="dog.img" [alt]="dog.name" class="dog-image" />
+      </ng-container>
+      <ng-template #loadingSkeleton>
+        <p-skeleton height="200px"></p-skeleton>
+      </ng-template>      <span
         class="favorite-icon"
         [ngClass]="{ favorited: isFavorite, 'not-favorited': !isFavorite }"
         (click)="onFavoriteClick()"
@@ -12,8 +16,12 @@
     </div>
   </ng-template>
   <div class="dog-info">
-    <h3 class="dog-name">{{ dog.name }}</h3>
-    <div class="info-row">
+    <ng-container *ngIf="dog; else nameSkeleton">
+      <h3 class="dog-name">{{ dog.name }}</h3>
+    </ng-container>
+    <ng-template #nameSkeleton>
+      <p-skeleton width="60%" height="1.5rem"></p-skeleton>
+    </ng-template>    <div class="info-row">
       <i class="pi pi-tag"></i>
       <span>{{ dog.breed }}</span>
     </div>
