--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -107,6 +107,7 @@
         <div class="dogs-grid">
           <div class="dog-card-wrapper" *ngFor="let dog of dogs">
             <app-dog-card
+            *ngIf="dog; else skeletonLoader"
               [dog]="dog"
               [isFavorite]="isFavorite(dog)"
               [distance]="dog.distance"
@@ -156,6 +157,7 @@
       <div class="match-result">
         <h3 class="match-title">We found your perfect companion!</h3>
         <app-dog-card
+          *ngIf="matchedDog; else skeletonLoader"
           [dog]="matchedDog"
           [isFavorite]="true"
           (favoriteToggle)="toggleFavorite($event)"
@@ -223,3 +225,14 @@
     </div>
   </div>
 </p-dialog>
+
+<ng-template #skeletonLoader>
+  <p-card class="dog-card">
+    <p-skeleton height="200px"></p-skeleton>
+    <div class="dog-info">
+      <p-skeleton width="60%" height="1.5rem"></p-skeleton>
+      <p-skeleton width="80%" height="1rem"></p-skeleton>
+      <p-skeleton width="50%" height="1rem"></p-skeleton>
+    </div>
+  </p-card>
+</ng-template>
