--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -32,7 +32,7 @@
     </ng-template>
   </p-toast>
   <div class="nav-links">
-    <button pButton type="button" class="p-button-text" label="Favorites" icon="pi pi-heart" (click)="navigate('/favorites')"></button>
+    <button pButton type="button" class="p-button-text p-button-fav" label="Favorites" icon="pi pi-heart" (click)="navigate('/favorites')"></button>
     <button 
       pButton 
       type="button" 
