--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -8,6 +8,7 @@
       placeholder=" " 
       [(ngModel)]="name" 
       (ngModelChange)="nameError = ''" 
+      (keydown.enter)="login()"
       required 
     />
     <label>Name</label>
@@ -21,6 +22,7 @@
       placeholder=" " 
       [(ngModel)]="email" 
       (ngModelChange)="emailError = ''" 
+      (keydown.enter)="login()"
       required 
     />
     <label>Email</label>
