--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -149,7 +149,7 @@
 <!-- Match Dialog -->
 <p-dialog
     [(visible)]="showMatchDialog"
-    header="Your Perfect Match!"
+    header="Your Perfect Match123!"
     [modal]="true"
     [style]="{width: '90vw', maxWidth: '800px'}"
     [blockScroll]="true"
