--- a/src/app/components/match/match.component.html
+++ b/src/app/components/match/match.component.html
@@ -13,6 +13,7 @@
       [isFavorite]="true"
       [distance]="matchedDog.distance"
       [location]="dogLocations.get(matchedDog.zip_code)"
+      [hideLoveSymbol] = "hideLoveSymbol"
     ></app-dog-card>
   </div>
 </p-dialog>
